changed layout to page index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: page
 title: Malia L. Kao
 subtitle: Graduate Student, The University of Texas at Austin, Department of Astronomy
 ---
