added cover image index.html

--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: page
 title: Malia L. Kao
 subtitle: Graduate Student, The University of Texas at Austin, Department of Astronomy
+cover-img: ["/assets/img/Whitedwarfrockymaterial.png":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
