--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: page
 title: Malia L. Kao
 subtitle: Graduate Student, The University of Texas at Austin, Department of Astronomy
-cover-img: ["/assets/img/Whitedwarfrockymaterial.png":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
+cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
