Added more to home page index.html

--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@ title: Malia L. Kao
 subtitle: Graduate Student, The University of Texas at Austin, Department of Astronomy
 cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
+
+I am an upcoming 4th-year Astronomy graduate student at the University of Texas at Austin and am working with my advisor Keith Hawkins \
+and co-advisor Don Winget on using white dwarf stars to study stellar and planetary evolution.
