added more info index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,4 @@ subtitle: Graduate Student, The University of Texas at Austin, Department of Ast
 cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
 
-I am an upcoming 4th-year Astronomy graduate student at the University of Texas at Austin and am working with my advisor Keith Hawkins \
-and co-advisor Don Winget on using white dwarf stars to study stellar and planetary evolution.
+I am a 4th-year Astronomy graduate student at the University of Texas at Austin and am working with Professors Keith Hawkins and Don Winget on using white dwarf stars to study stellar and planetary evolution. I primarily use observational methods to study different aspects of white dwarf anatomy - from asteroseismology to study their interiors to spectroscopy to study their atmospheres. I am a prolific user of the 2.1-m Otto Struve telescope and Hobby-Eberly telescope at McDonald Observatory, 
