changed subtitle to be separated by lines instead of commas index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: page
 title: Malia L. Kao
-subtitle: Graduate Student, The University of Texas at Austin, Department of Astronomy
+subtitle: </p>Graduate Student</p></p>The University of Texas at Austin</p></p>Department of Astronomy</p>
 cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
 
-<p>I am a 4th-year Astronomy graduate student at the University of Texas at Austin and am working with Professors Keith Hawkins and Don Winget on using white dwarf stars to study stellar and planetary evolution. I primarily use observational methods to learn about different aspects of white dwarf anatomy: from asteroseismology to study their interiors to spectroscopy to study their atmospheres. I am a prolific user of the 2.1-m Otto Struve telescope and Hobby-Eberly telescope at McDonald Observatory, and have discovered several new members of the ultra-massive crystallizing pulsating white dwarfs and the white dwarfs that are accreting planetary remains. A big part of my research includes melding AI and large telescopic surveys like Gaia to uncover different types of white dwarfs that are typically difficult to find using conventional methods, such as the cool metal-polluted white dwarfs.</p> 
+</p>I am a 4th-year Astronomy graduate student at the University of Texas at Austin and am working with Professors Keith Hawkins and Don Winget on using white dwarf stars to study stellar and planetary evolution. I primarily use observational methods to learn about different aspects of white dwarf anatomy: from asteroseismology to study their interiors to spectroscopy to study their atmospheres. I am a prolific user of the 2.1-m Otto Struve telescope and Hobby-Eberly telescope at McDonald Observatory, and have discovered several new members of the ultra-massive crystallizing pulsating white dwarfs and the white dwarfs that are accreting planetary remains. A big part of my research includes melding AI and large telescopic surveys like Gaia to uncover different types of white dwarfs that are typically difficult to find using conventional methods, such as the cool metal-polluted white dwarfs.</p> 
 
 </p>I received my Master's and Bachelor's degrees in Physics at the New Mexico Instiute of Mining and Technology (a.k.a. New Mexico Tech) in Socorro, NM. During my time there, I completed a 3-year internship at Sandia National Laboratories under the supervision of Drs. Jim Bailey and Guillaume Loisel.</p>
 
