changed to separate subtitles index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: page
 title: Malia L. Kao
-subtitle: </p>Graduate Student</p></p>The University of Texas at Austin</p></p>Department of Astronomy</p>
+subtitle: Graduate Student
+subtitle: The University of Texas at Austin
+subtitle: Department of Astronomy
 cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
 
