trying break for subtitle index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 layout: page
 title: Malia L. Kao
 subtitle: Graduate Student
-subtitle: The University of Texas at Austin
-subtitle: Department of Astronomy
+          <br>
+          Department of Astronomy
+          <br>
+          University of Texas at Austin
 cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
 
