changed -- to - in subtitle index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Malia L. Kao
-subtitle: Graduate Student -- Department of Astronomy -- University of Texas at Austin
+subtitle: Graduate Student - Department of Astronomy - University of Texas at Austin
 cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
 ---
 
