--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ cover-img: ["/assets/img/Whitedwarfrockymaterial.jpg":"Polluted white dwarf, Cre
 
 </p>I received my Master's and Bachelor's degrees in Physics at the New Mexico Instiute of Mining and Technology (a.k.a. New Mexico Tech) in Socorro, NM. During my time there, I completed a 3-year internship at Sandia National Laboratories under the supervision of Drs. Jim Bailey and Guillaume Loisel.</p>
 
-</p>You can read more about my current and past research <a href="https://mlkao94697.github.io/research/">here</a> and peruse my publications <a href="https://mlkao94697.github.io/publications/">here</a>. If you'd like to get a glimpse of who I am outside of my research, check out my <a href="https://mlkao94697.github.io/aboutme/">about me</a> page.</p>
+<!-- </p>You can read more about my current and past research <a href="https://mlkao94697.github.io/research/">here</a> and peruse my publications <a href="https://mlkao94697.github.io/publications/">here</a>. If you'd like to get a glimpse of who I am outside of my research, check out my <a href="https://mlkao94697.github.io/aboutme/">about me</a> page.</p> -->
